# xclaw-ag-input-guard

./: README.md  SKILL.md  pyproject.toml
config/: xclaw-ag-input-guard.yaml
examples/: basic_usage.py
src/xclaw_ag_input_guard/: __init__.py  config.py  detector.py  interceptor.py
tests/: __init__.py  test_detector.py  test_integration.py
